Simply since the agent code doesn't run without java.instrument